# EditionMultimedia

./: CMakeLists.txt  EditionMultimedia.doxyfile  EditionMultimedia.pro  README.md
doc/: EditionMultimedia.doxyfile
include/: Data.h  DocumentationWindow.h  MainWindow.h  MultimediaFile.h  Settings.h  Tools.h
interfaces/: MainWindow.ui
ressources/: Ressources.qrc
source/: Data.cpp  DocumentationWindow.cpp  EditionMultimedia.cpp  MainWindow.cpp  MultimediaFile.cpp  Settings.cpp  Tools.cpp
